more compress, fix index page top phone

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 
 
 		<div class="editorElement layer-type-block ui-droppable block-6 houses-page-top">
-			<div class="editorElement layer-type-block ui-droppable block-3" >
+			<div class="editorElement layer-type-block ui-droppable block-3">
 				<div class="layout column layout_5" >
 					<div class="editorElement layer-type-block ui-droppable block-2 logo-descr" >
 						<div class="site-name-3 widget-2 widget-type-site_name editorElement layer-type-widget">
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 
-				<div class="layout column layout_6" >
+				<div class="layout column layout_6">
 					<div class="widget-4 horizontal menu-6 wm-widget-menu widget-type-menu_horizontal editorElement layer-type-widget" data-screen-button="more" data-responsive-tl="button" data-responsive-tp="button" data-responsive-ml="columned" data-more-text="..." data-child-icons="0">
 
 						<div class="menu-button">Меню</div>
@@ -100,33 +100,7 @@
 				</div>
 			</div>
 
-
-
-			<div class="editorElement layer-type-block ui-droppable block-4">
-				<div class="layout column layout_16"></div>
-				<div class="layout column layout_9" >
-					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-						<div class="inner">
-							<label class="cell-icon" for="tg-phones-9">
-								<div class="icon"></div>
-							</label>
-							<input id="tg-phones-9" class="tgl-but" type="checkbox">
-							<div class="block-body-drop">
-								<div class="cell-text">
-									<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-									<div class="text_body">
-										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-
+			
 
 			<div class="editorElement layer-type-block ui-droppable block-8">
 				<div class="layout column layout_13">
@@ -134,7 +108,7 @@
 
 						<div class="editable_block-11 widget-7 editorElement layer-type-widget">
 							<div class="body">
-								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 90 м<sup>2</sup> от 2.45 млн руб!</span></h1></div>
+								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 80 м<sup>2</sup> от 2.50 млн руб!</span></h1></div>
 								<div class="text">
 									<div class="layout column layout_8" >
 										<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget head-button" href="#take-consultation" ><span>Узнать варианты ипотечных программ</span></a>
@@ -162,8 +136,33 @@
 
 					</div>
 				</div>
-
 				<div class="layout column layout_14" >
+
+					<div class="editorElement layer-type-block ui-droppable block-4">
+						<div class="layout column layout_16"></div>
+						<div class="layout column layout_9"></div>
+						<div class="layout column layout_9">
+							<a href="tel:+7 (4213) 69-81-00" class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+								<div class="inner">
+									<label class="cell-icon" for="tg-phones-9">
+										<div class="icon"></div>
+									</label>
+									<input id="tg-phones-9" class="tgl-but" type="checkbox">
+									<div class="block-body-drop">
+										<div class="cell-text">
+											<div class="text_body">
+												<div class="align-elem">
+													<div><span>+7 (4212) 69-81-00</span></div>
+												</div>
+											</div>
+											<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
+										</div>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
 					<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
 
 						<div class="inner">
@@ -172,8 +171,9 @@
 							</label>
 							<div class="block-body-drop">
 								<div class="cell-text">
+									<div class="title"><div class="align-elem">Email:</div></div>
 									<div class="text_body">
-										<div class="align-elem send-mail"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
+										<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
 									</div>
 								</div>
 							</div>
@@ -186,17 +186,19 @@
 							<input id="tg-email-14" class="tgl-but" type="checkbox">
 							<div class="block-body-drop">
 								<div class="cell-text">
+									<div class="title"><div class="align-elem">Email:</div></div>
 									<div class="text_body">
-										<div class="align-elem send-mail"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
+										<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
 									</div>
 								</div>
 							</div>
 						</div>
 
 					</div>
+					
 				</div>
-
 			</div>
+
 		</div>
 
 
