--- a/app/our-villages.html
+++ b/app/our-villages.html
@@ -110,7 +110,7 @@
 								</ul> -->
 							</li>
 							<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
-							<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
+							<li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li>
 							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
 							<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 						</ul> 
@@ -190,82 +190,23 @@
 	<div class="editorElement layer-type-block ui-droppable block-19" >
 		<div class="editorElement layer-type-block ui-droppable block-20" >
 			<div class="editorElement layer-type-block ui-droppable block-21" >
-				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Коммерческая недвижимость</div> 
-				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Коммерческая недвижимость</h1>
+				<div class="widget-29 path widget-type-path editorElement layer-type-widget"><a href="index.html">Главная</a> \ Коттеджные поселки</div> 
+				<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Коттеджные поселки</h1>
 				<article class="content-52 content widget-31 widget-type-content editorElement layer-type-widget">
 
-					<div class="type-text-block frames-content">
+					<div class="our-villages">
 
-						<h2>Собираетесь строить офисное здание или магазин?<br>А Хотите построить в 2 раза быстрее и дешевле, чем вы планировали?</h2>
-						<h3><span>Тогда замените металлокаркас вашего объекта на сборный железобетон, который вам произведет и смонтирует завод КПД 100</span></h3>
-						<h3><span>Всего за 12 000руб / кв м Вы получите полный комплекс услуг - Производство + монтаж:</span></h3>
-						<ul>
-							<li><strong>свайный фундамент</strong>: забивка двух 6 метровых свай под каждую колонну, заливка ростверком</li>
-							<li><strong>колонно - ригельный каркас</strong> (колонны сечением 30*30см )</li>
-							<li><strong>перекрытия всех этажей</strong>: ребистые плиты на полы первого этажа, межэтажное перекрытие, кровля</li>
-							<li><strong>строительство диафрагм жесткости</strong></li>
-						</ul>
-						<h3><span>Срок проектирования, производства и монтажа Рамы на Вашем участке - всего от 1,5 до 3-х месяцев!</span></h3>
-						<p><strong>После строительства рамы - Вам останется смонтировать сендвич панели, утеплить кровлю и приступать к отделке!</strong></p>
-
-						<div class="video">
-							<iframe width="100%" height="400" src="https://www.youtube.com/embed/ubmXCZlSojY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
-
-						<h2>Преимущества</h2>
-						<p>Преимущества колонно-ригельной системы перед металлическим каркасом:</p>
-						<ul>
-							<li><h3><span>долговечность</span></h3> - гарантия на колонно-ригельный каркас - 100 лет,</li>
-							<li><h3><span>низкая стоимость</span></h3> - всего 12 000 руб / кв м материалы + работа</li>
-							<li><h3><span>высокая скорость возведения</span></h3> - всего до 3-х месяцев</li>
-							<li><h3><span>надежность</span></h3> - 100% пожарная безопасность</li>
-							<li><h3><span>эстетичность</span></h3> - внутри Вашего Объекта квадратные колонны, а не железные швеллера и двутавры</li>
-						</ul>
-						<p><strong>Почему, не смотря на все преимущества сборного железобетона, эти конструкции редко используют в строительстве?</strong></p>
-						<p>Все дело в том, что за годы длительного застоя в строительной области заводы перестали производить колонно-ригельные системы и они просто "вымерли".</p>
-						<p>И сегодня, забыв о преимуществах железобетонной рамы, проектировщикам проще считать металлокаркас. Они не думают о Вашей выгоде, они не заинтересованы в Вашей экономии.</p>
-						<p>Завод КПД 100 возрождает производство колонно-ригельной системы.</p>
-						<p>Более того, мы пошли дальше: мы не просто производим Рамы, мы оказываем полный комплекс услуг: проектирование, производство, монтаж.</p>
-						<p>В отличие от других заводов мы не торгуем отдельно колонно-ригельной системой, мы продаем ее только с нашим монтажом.</p>
-						<p>У нас есть свои строительные, сборочные бригады, техника, поэтому в этом разделе вы не найдете отдельного прайса на продукцию нашего завода: сваи, колонны, ригели, ребристые плиты.</p>
-						<h3>Сравнение металлокаркаса и Рамы из сборного железобетона:</h3>
-						<p><strong>Стоимость</strong></p>
-						<ul>
-							<li><strong>Рама железобетонная</strong>. Стоимость всех материалов и самого строительства Рамы (от фундамента до диафрагм жесткости) - всего 12 000р / кв м!</li>
-							<li><strong>Металлокаркас</strong>. При строительстве Объекта из металлокаркаса в 12 000 руб/кв м нереально уложиться даже на покупку материалов:</li>
-						</ul>
-						<p>Для примера:</p>
-						<ul>
-							<li>сваи (покупка, транспортировка, забивка, оголовки)</li>
-							<li>металл на колонно-ригельную систему (покупка металла, изготовлние на заводе, транспортировка, монтаж)</li>
-							<li>противопожарная обмазка и против ржавчины - после установки металлокаркаса</li>
-							<li>плиты перекрытия (покупка, транспортировка, монтаж) либо монолитные перекрытия (покупка бетона, заливка) и т.д.</li>
-						</ul>
-						<h2>Отделка</h2>
-						<p><strong>Рама железобетонная</strong>. Сделать отделку квадратной железобетонной поверхности можно любыми отделочными материалами, Железобетонные колонны не требуют дополнительной огнезащиты.</p>
-						<p><strong>Металлокаркас</strong>. Для приведения металлокаркаса в соответствие с требованиями пожарной безопасности кроме огнезащитной обработки металл необходимо конструктивно зашить. Как правило, для этого используют ГВЛ, придав ему простую квадратную форму. В то время как железобетонные колонны уже имеют квадратную форму.</p>
-						<h3>Фасад</h3>
-						<p>И на Раму из железобетона и на металлокаркас Вы можете вешать любой фасадный материал: сендвич панели / остекление</p>
-						<h2>Размеры пролетов между колонн</h2>
-						<p><strong>Рама железобетонная</strong>. Пролет 6 метров</p>
-						<p><strong>Металлокаркас</strong>. Пролет до 36 метров. Это единственное неоспоримое преимущество металлокаркаса.</p>
-						<p>Однако, для Объектов с такими большими пролетами, мы предлагаем свои железобетонные колонны с перекрытиями из металла. Для Вас это будет экономически выгоднее!</p>
-						<h3><span>Колонно-ригельная система из сборного железобетона в несколько раз выигрывает по цене у металлической и при этом позволяет добиваться тех же целей!</span></h3>
-						<h2>Цены</h2>
-						<h3><span>Наши цены говорят сами за себя</span></h3>
-						<h3><span>За 12 000 руб/кв.м мы готовы построить 2 -х этажный Объект площадью 1 500 кв м с высотой этажей 4м</span></h3>
-						<p>1 500 кв м * 12 000 руб/кв м = 18 млн рублей! <span class="spec">всего за 2 месяца вместе с изготовлением и монтажом!</span></p>
-						<p>Это очень короткие сроки!</p>
-						<p>Если вы хотите построить 2-х этажный Объект площадью 3 000 кв м, то стоимость может опуститься до 10 000 руб/кв м,</p>
-						<p>Если Объект небольшой, то цена может быть немного выше</p>
-						<h3><span>С нами вы сэкономите минимум в 1,5 раза, а если посчитать отделку и прочие работы, то экономия может составить до 2 раз!</span></h3>
-						<h3>Наше предложение 12 000 руб/кв м - очень выгодное!</h3>
-						<h2>У вас уже есть проект?</h2>
-						<p>Если у вас уже есть готовый проект, то наша компания изменит его под нашу железобетонную колонно-ригельную систему:</p>
-						<ul>
-							<li>мы самостоятельно перепроектируем и пересогласуем Ваш проект за Вас;</li>
-							<li>либо внесем изменения в Ваш проект, оплатив изменения Вашим проектировщикам!</li>
-						</ul>
+						<a href="#" target="_blank" rel="nofollow">
+							123
+						</a>
+						
+						<a href="#" target="_blank" rel="nofollow">
+							123
+						</a>
+						
+						<a href="#" target="_blank" rel="nofollow">
+							123
+						</a>
 
 					</div>
 
