fix error: wrong phone number

--- a/app/our-villages.html
+++ b/app/our-villages.html
@@ -141,7 +141,7 @@
 								<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
 								<div class="text_body">
 									<div class="align-elem">
-										<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+										<div><a href="tel:+7 (4212) 69-81-00">+7 (4212) 69-81-00</a></div>
 									</div>
 								</div>
 							</div>
@@ -197,7 +197,20 @@
 					<div class="our-villages">
 
 						<a href="#" target="_blank" rel="nofollow">
-							123
+							<div class="about-text">
+								<div class="text">
+									<h2>О проекте</h2>
+									<div class="image"></div>
+									<ul>
+										<li>Коттеджный поселок “Семейный” расположен в селе Тополево в 15 минутах езды на автомобиле от центра Хабаровска</li>
+										<li>Село Тополево является экологически чистым районом пригорода Хабаровска</li>
+										<li>В распоряжении жителей коттеджного поселка развитая инфраструктура для жизни - детские сады, школа, поликлиника</li>
+										<li>Всего в одной остановке от коттеджного поселка расположен крупный гипермаркет, ТЦ "Стрелка" и магазины низких цен "Амбар", "Светофор"</li>
+										<li>Жители коттеджного поселка получают все виды льгот, предусмотренные для проживающих в сельской местности: по коммунальным платежам, при регистрации автомобиля, по налогообложению и другие</li>
+									</ul>
+								</div>
+								<div class="image"></div>
+							</div>
 						</a>
 						
 						<a href="#" target="_blank" rel="nofollow">
@@ -251,7 +264,7 @@
 								<div class="title"><div class="align-elem">Бесплатная консультация</div></div>
 								<div class="text_body">
 									<div class="align-elem">
-										<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+										<div><a href="tel:+7 (4212) 69-81-00">+7 (4212) 69-81-00</a></div>
 									</div>
 								</div>
 							</div>
