--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -146,8 +146,7 @@
 
 				<div class="layout column layout_9">
 
-					<div
-						class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
 						<div class="inner">
 							<label class="cell-icon" for="tg-phones-9">
 								<div class="icon"></div>
@@ -160,7 +159,7 @@
 									</div>
 									<div class="text_body">
 										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+											<div><a href="tel:+7 (4212) 69-81-00">+7 (4212) 69-81-00</a></div>
 										</div>
 									</div>
 								</div>
@@ -168,8 +167,7 @@
 						</div>
 					</div>
 
-					<div
-						class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
+					<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
 
 						<div class="inner">
 							<label class="cell-icon" for="tg-email-14">
@@ -372,7 +370,7 @@
 									</div>
 									<div class="text_body">
 										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+											<div><a href="tel:+7 (4212) 69-81-00">+7 (4212) 69-81-00</a></div>
 										</div>
 									</div>
 								</div>
