hide not use homes lines

--- a/app/index.html
+++ b/app/index.html
@@ -259,7 +259,7 @@
 
 
 
-						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+						<!-- <div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
 								<div class="description">
@@ -288,10 +288,9 @@
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_dbl_roof/sm.jpg" alt="Дом 82кв. м."></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/1_dbl_roof/2.jpg" data-fancybox="house-1_dbl_roof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+														<a class="image fancybox" href="img/houses/1_dbl_roof/2.jpg" data-fancybox="house-1_dbl_roof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
-													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
 												</div>
 											</div>
 
@@ -303,10 +302,9 @@
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_dbl_roof/sm.jpg" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/house-2_dbl_roof/2.jpg" data-fancybox="house-2_dbl_roof" data-thumb="img/houses/house-2_dbl_roof/2.jpg"></a> -->
+														<a class="image fancybox" href="img/houses/house-2_dbl_roof/2.jpg" data-fancybox="house-2_dbl_roof" data-thumb="img/houses/house-2_dbl_roof/2.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 122,16кв. м.</span></span>
-													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
 												</div>
 											</div>
 
@@ -319,7 +317,7 @@
 								</div>
 
 							</div>
-						</div>
+						</div> -->
 
 
 
@@ -490,7 +488,7 @@
 
 
 
-						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+						<!-- <div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
 								<div class="description">
@@ -513,7 +511,7 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_1_dblroof/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a> -->
+														<a class="image fancybox" href="img/houses/people_1_dblroof/2.jpg" data-fancybox="house-people_1_dblroof" data-thumb="img/houses/people_1_dblroof/2.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -528,7 +526,7 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_2_dblroof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a> -->
+														<a class="image fancybox" href="img/houses/house-people_2_dblroof/2.jpg" data-fancybox="house-people_2_dblroof" data-thumb="img/houses/house-people_2_dblroof/2.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
@@ -543,7 +541,7 @@
 														<span class="img-convert img-cover"><img src="img/houses/people_3_dblroof/sm.jpg?v=1.1" alt="Дом 150кв. м"></span>
 													</a>
 													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_3_dblroof/2.jpg" data-fancybox="house-people_3_dblroof" data-thumb="img/houses/people_3_dblroof/2.jpg"></a> -->
+														<a class="image fancybox" href="img/houses/people_3_dblroof/2.jpg" data-fancybox="house-people_3_dblroof" data-thumb="img/houses/people_3_dblroof/2.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
@@ -559,7 +557,7 @@
 								</div>
 								
 							</div>
-						</div>
+						</div> -->
 
 
 
