--- a/app/index.html
+++ b/app/index.html
@@ -348,9 +348,10 @@
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/2.jpg" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/3.jpg" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/scheme.jpg" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/scheme.jpg"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/2.jpg?v=1.1" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/2.jpg?v=1.1"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/3.jpg?v=1.1" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/3.jpg?v=1.1"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/4.jpg?v=1.1" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/4.jpg?v=1.1"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/scheme.jpg?v=1.1" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/scheme.jpg?v=1.1"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
 													<!-- <div class="text"><div class="align-elem"><p>Площадь дома 0кв. м.</p></div></div> -->
