--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -221,7 +221,7 @@
 						<div class="masonry">
 
 							<div class="item">
-								<img src="img/gallery/sm/1.jpg">
+								<img src="img/gallery/1.jpg">
 							</div>
 
 							<div class="item">
@@ -229,39 +229,39 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/2.jpg">
+								<img src="img/gallery/2.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/3.jpg">
+								<img src="img/gallery/3.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/4.jpg">
+								<img src="img/gallery/4.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/5.jpg">
+								<img src="img/gallery/5.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/6.jpg">
+								<img src="img/gallery/6.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/7.jpg">
+								<img src="img/gallery/7.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/8.jpg">
+								<img src="img/gallery/8.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/9.jpg">
+								<img src="img/gallery/9.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/10.jpg">
+								<img src="img/gallery/10.jpg?v=1.1">
 							</div>
 
 							<div class="item">
@@ -269,11 +269,11 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/11.jpg">
+								<img src="img/gallery/11.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/12.jpg">
+								<img src="img/gallery/12.jpg?v=1.1">
 							</div>
 
 							<div class="item">
@@ -281,39 +281,67 @@
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/13.jpg">
+								<img src="img/gallery/13.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/14.jpg">
+								<img src="img/gallery/14.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/15.jpg">
+								<img src="img/gallery/15.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/16.jpg">
+								<img src="img/gallery/16.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/17.jpg">
+								<img src="img/gallery/17.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/18.jpg">
+								<img src="img/gallery/18.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/19.jpg">
+								<img src="img/gallery/19.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/20.jpg">
+								<img src="img/gallery/20.jpg?v=1.1">
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/sm/21.jpg">
+								<img src="img/gallery/21.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/22.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/23.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/24.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/25.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/26.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/27.jpg?v=1.1">
+							</div>
+
+							<div class="item">
+								<img src="img/gallery/28.jpg?v=1.1">
 							</div>
 
 						</div>
