--- a/app/about.html
+++ b/app/about.html
@@ -91,8 +91,8 @@
 									</ul> -->
 								</li>
 								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
-								<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
-								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="https://семейный-дв.рф" target="blank" rel="nofollow"><span class="menu-item-text">Коттеджные поселки</span></a></li>
+								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul> 
 						</div>
@@ -333,9 +333,9 @@
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/workshop-zbi.jpg">
+										<a class="image fancybox" href="img/workshop-zbi.jpg?v=1.2">
 											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/workshop-zbi.jpg" alt="Цех по производству ЖБИ"></span>
+											<span class="img-convert img-cover"><img src="img/workshop-zbi_sm.jpg?v=1.2" alt="Цех по производству ЖБИ"></span>
 											<div class="image-inner"></div>
 										</a>
 									</div>
@@ -361,9 +361,9 @@
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/workshop-metall.jpg">
+										<a class="image fancybox" href="img/workshop-metall.jpg?v=1.2">
 											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/workshop-metall.jpg" alt="Цех производства металлоконструкций"></span>
+											<span class="img-convert img-cover"><img src="img/workshop-metall_sm.jpg?v=1.2" alt="Цех производства металлоконструкций"></span>
 											<div class="image-inner"></div>
 										</a>
 									</div>
@@ -430,9 +430,9 @@
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/workshop-wood_1.jpg">
+										<a class="image fancybox" href="img/workshop-wood.jpg?v=1.2">
 											<div class="item-label"><div class="align-elem">Акция</div></div>
-											<span class="img-convert img-cover"><img src="img/workshop-wood_1.jpg" alt="Деревообрабатывающий цех"></span>
+											<span class="img-convert img-cover"><img src="img/workshop-wood_sm.jpg?v=1.2" alt="Деревообрабатывающий цех"></span>
 											<div class="image-inner"></div>
 										</a>
 									</div>
