--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -112,8 +112,8 @@
 								</ul> -->
 							</li>
 							<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
-							<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
-							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
+							<li class="menu-item"><a href="https://семейный-дв.рф" target="blank" rel="nofollow"><span class="menu-item-text">Коттеджные поселки</span></a></li>
+							<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 							<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 						</ul> 
 					</div>
