--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -125,8 +125,8 @@
 									</ul> -->
 								</li>
 								<li class="menu-item"><a href="our-objects.html"><span class="menu-item-text">Наши объекты</span></a></li>
-								<!-- <li class="menu-item"><a href="our-villages.html"><span class="menu-item-text">Коттеджные поселки</span></a></li> -->
-								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Дилерам</span></a></li>
+								<li class="menu-item"><a href="https://семейный-дв.рф" target="blank" rel="nofollow"><span class="menu-item-text">Коттеджные поселки</span></a></li>
+								<li class="menu-item"><a href="dealers.html"><span class="menu-item-text">Партнерам</span></a></li>
 								<li class="menu-item"><a href="kontakty.html"><span class="menu-item-text">Контакты</span></a></li>
 							</ul> 
 						</div>
@@ -220,129 +220,213 @@
 
 						<div class="masonry">
 
+							<a class="item fancybox" href="img/gallery/1.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/1.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/11.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/11.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/2.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/2.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/3.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/3.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/14.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/14.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/15.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/15.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/4.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/4.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/5.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/5.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/6.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/6.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/7.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/7.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/8.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/8.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/9.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/9.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/10.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/10.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/12.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/12.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/13.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/13.jpg?v=1.2" alt="img">
+							</a>
+
 							<div class="item">
-								<img src="img/gallery/1.jpg">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/4iGi3JAEx7s?" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<iframe width="350" height="280" src="https://www.youtube.com/embed/dm1bEfG965U" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/zlgxR_GiscE" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/2.jpg?v=1.1">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/dm1bEfG965U" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/3.jpg?v=1.1">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/oljsyb6lLMc" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/4.jpg?v=1.1">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/JJfTNmT4uu8" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/5.jpg?v=1.1">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/o82kVNWJd0E" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/6.jpg?v=1.1">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/pbM3E0OZRM4" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/7.jpg?v=1.1">
+								<iframe width="350" height="200" src="https://www.youtube.com/embed/Dv4dgKbt2dQ" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/8.jpg?v=1.1">
+								<iframe width="350" height="580" src="https://www.youtube.com/embed/jUvWy33S_8g" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
 							<div class="item">
-								<img src="img/gallery/9.jpg?v=1.1">
+								<iframe width="350" height="580" src="https://www.youtube.com/embed/jiBNrL0zmMQ" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 
-							<div class="item">
-								<img src="img/gallery/10.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/16.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/16.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<iframe width="350" height="270" src="https://www.youtube.com/embed/zlgxR_GiscE" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
+							<a class="item fancybox" href="img/gallery/17.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/17.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/11.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/18.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/18.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/12.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/19.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/19.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<iframe width="350" height="240" src="https://www.youtube.com/embed/4iGi3JAEx7s?" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
+							<a class="item fancybox" href="img/gallery/20.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/20.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/13.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/21.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/21.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/14.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/22.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/22.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/15.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/23.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/23.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/16.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/24.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/24.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/17.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/25.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/25.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/18.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/26.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/26.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/19.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/27.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/27.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/20.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/28.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/28.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/21.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/29.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/29.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/22.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/30.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/30.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/23.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/31.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/31.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/24.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/32.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/32.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/25.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/33.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/33.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/26.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/34.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/34.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/27.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/35.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/35.jpg?v=1.2" alt="img">
+							</a>
 
-							<div class="item">
-								<img src="img/gallery/28.jpg?v=1.1">
-							</div>
+							<a class="item fancybox" href="img/gallery/36.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/36.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/37.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/37.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/38.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/38.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/39.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/39.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/40.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/40.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/41.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/41.jpg?v=1.2" alt="img">
+							</a>
+
+							<a class="item fancybox" href="img/gallery/42.jpg?v=1.2" data-fancybox="objects">
+								<img src="img/gallery/sm/42.jpg?v=1.2" alt="img">
+							</a>
 
 						</div>
 
