--- a/app/index.html
+++ b/app/index.html
@@ -379,27 +379,6 @@
 												</div>
 											</div>
 
-											<!-- <div class="item-outer">
-												<div class="item">
-													<a class="image fancybox" href="img/houses/people_3/1.jpg" data-fancybox="house-people_3">
-														<div class="house-price"><span>3.69 млн ₽</span></div>
-														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg?v=1.1" alt="Дом 150кв. м"></span>
-													</a>
-													<div class="d-none">
-														<a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_3/3.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_3/4.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/4.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_3/5.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/5.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_3/6.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/6.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_3/7.jpg" data-fancybox="house-people_3" data-thumb="img/houses/people_3/7.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3"></a>
-													</div>
-													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
-													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
-												</div>
-											</div> -->
-
 										</div>
 									</div>
 								</div>
@@ -543,19 +522,9 @@
 									<li><p><span>Разрешительная документация (разршение, тех документы, ввод) = 30 000р.;</span></p></li>
 									<li><p><span>Подготовительные работы на участке для сборки: в зависимости от посадки дома от границы участка: от 50 до 110 тыс р;</span></p></li>
 									<li><p><span>Канализация - шамбо 10 куб  / септик 1,5куб / сутки = 200 тыс р;</span></p></li>
-									<li><p><span>Скважина: 3 500 руб/м п (примерно 40 м = 140 000р); насос + обвяза = 40 000р;</span></p></li>
+									<li><p><span>Скважина: 3 500 руб/м п (примерно 40 м = 140 000р); насос + обвязка = 40 000р;</span></p></li>
 									<li><p><span>Подключение эл-ва к дому = от 30 до 50 000р;</span></p></li>
 								</ul>
-								<!-- <ul>
-									<li><p><span>Перегородки межкомнатные: от 100 тыс. до 170 тыс р.;</span></p></li>
-									<li><p><span>Навес под авто - 150 000р.;</span></p></li>
-									<li><p><span>Разводка электрики по дому - в зависимости от площади дома, расчитывается индивидуально;</span></p></li>
-									<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж - 30 тыс, 35 тыс, 40 тыс, 45 тыс, в зависимости от площади дома;</span></p></li>
-									<li><p><span>Устройство холодной стропильной кровли с водосточной системой и подшивкой софитами (в линейке Народный дом) - 250 тыс, 300 тыс, 350 тыс, 400 тыс р.;</span></p></li>
-									<li><p><span>Устройство водосточной системы в линейке Народный дом - от 50 тыс до 70 тыс р.;</span></p></li>
-									<li><p><span>Покраска окон в любой цвет (50 тыс, 70 тыс, 90 тыс, 120 тыс);</span></p></li>
-									<li><p><span>Межэтажные бетонные перекрытия в линейке Народный дом - 30 тыс, 40 тыс, 50 тыс, 60 тыс.р.;</span></p></li>
-								</ul> -->
 
 								<h2 class="next-h">Пирог кровли</h2>
 
