--- a/app/index.html
+++ b/app/index.html
@@ -303,7 +303,7 @@
 
 										</div>
 									</div>
-								</div>
+								</div>[]
 
 								<div class="button-container">
 									<a class="open-form-button center-button" href="#take-2_4th_roof"><span>Заказать Одноэтажный дом с четырехскатной кровлей</span></a>
@@ -956,7 +956,7 @@
 
 			<div>
 				<h3>Стандартная ипотека от 8,8% на строительство дома в городе или сельской местности</h3>
-				<h3>Уникальное предложение! первый год у Вас всего 6,3% - мы платим проценты за Вас! <br>(предложение действует до 30.08.2020г)</h3>
+				<h3>Уникальное предложение! первый год у Вас всего 6,3% - мы платим проценты за Вас! <br>(предложение действует до 30.10.2020г)</h3>
 				<p><strong>условия получения ипотеки:</strong></p>
 				<ul>
 					<li>первоначальный взнос 25%;</li>
@@ -974,7 +974,7 @@
 				<p>А затем готовый дом оформит Вам <b>БЕЗ ЗАЛОГА и БЕЗ ПОРУЧИТЕЛЕЙ</b> в ипотеку</p>
 				<p><strong>условия получения ипотеки:</strong></p>
 				<ul>
-					<li>первоначальный взнос 30%;</li>
+					<li>первоначальный взнос 45%;</li>
 					<li>макс. сумма кредита до 6 млн. руб.;</li>
 					<li>срок кредита до 20 лет;</li>
 					<li>земельный участок должен находиться в черте города, быть категории ИЖС/ЛПХ, быть в собственности либо аренде на срок  не менее срока действия кредита.</li>
