--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -14,14 +14,14 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<link rel="stylesheet" href="styles.css?v=1.1">
-	<link rel="stylesheet" href="title.styles.css?v=2.9">
+	<link rel="stylesheet" href="title.styles.css?v=3.0">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.9">
+	<link rel="stylesheet" href="css/main.min.css?v=3.0">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=2.9"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.0"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -222,7 +222,7 @@
 					<h1 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Наши объекты</h1>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дом в с. Некрасовка</h2>
+						<h2 class="h2">Дом двухэтажный 111,91м<sup><small>2</small></sup> с террасой, балконом и четырехскатной кровлей в с. Некрасовка</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/8_nekrasovka_1/1.jpg?v=1.3" data-fancybox="8_nekrasovka_1">
@@ -245,7 +245,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дом в с. Тополево</h2>
+						<h2 class="h2">Дом двухэтажный, мансардный, 111,91м<sup><small>2</small></sup> с террасой, балконом и четырехскатной кровлей в с. Тополево</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/7_topolevo_1/1.jpg?v=1.3" data-fancybox="7_topolevo_1">
@@ -276,7 +276,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дом на Красной Речке</h2>
+						<h2 class="h2">Дом двухэтажный 147,03м<sup><small>2</small></sup> с террасой, балконом и четырехскатной кровлей на Красной Речке</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/6_red_river_1/1.jpg?v=1.3" data-fancybox="6_red_river_1">
@@ -303,7 +303,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дом на ул.Ханкайская</h2>
+						<h2 class="h2">Дом двухэтажный, мансардный, 109,1м<sup><small>2</small></sup> с террасой и балконом на ул.Ханкайская</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/5_hankaiskaya_1/1.jpg?v=1.3" data-fancybox="5_hankaiskaya_1">
@@ -334,7 +334,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Дом в с.Виноградовка</h2>
+						<h2 class="h2">Дом двухэтажный, мансардный, 173,78м<sup><small>2</small></sup> с террасой и балконом в с.Виноградовка</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/4_vinogradovka_1/1.jpg?v=1.3" data-fancybox="4_vinogradovka_1">
@@ -365,7 +365,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Шоурум №3</h2>
+						<h2 class="h2">Шоурум №3</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/3_showroom_3/1.jpg?v=1.3" data-fancybox="3_showroom_3">
@@ -396,7 +396,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Шоурум №2</h2>
+						<h2 class="h2">Шоурум №2</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/2_showroom_2/1.jpg?v=1.3" data-fancybox="2_showroom_2">
@@ -427,7 +427,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h1 widget-30 widget-type-h1 editorElement layer-type-widget">Шоурум №1</h2>
+						<h2 class="h2">Шоурум №1</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/1_showroom_1/1.jpg?v=1.3" data-fancybox="1_showroom_1">
