--- a/app/about.html
+++ b/app/about.html
@@ -329,20 +329,35 @@
 						<div class="title">
 							<h2 class="align-elem">Цех по производству ЖБИ</h2>
 						</div>
-						<div class="image">
+
+						<!-- <div class="image">
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/workshop-zbi.jpg?v=1.2">
-											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/workshop-zbi_sm.jpg?v=1.2" alt="Цех по производству ЖБИ"></span>
+										<a class="image fancybox" href="img/about-sliders/concrete/7.JPG?v=1.1">
+											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<span class="img-convert img-cover"><img src="img/about-sliders/concrete/7.JPG?v=1.1" alt="Деревообрабатывающий цех"></span>
 											<div class="image-inner"></div>
 										</a>
 									</div>
 								</div>
 							</span>
 							<div class="image-inner"></div>
+						</div> -->
+
+						<div class="image">
+							<span class="img-convert img-cover">
+								<div class="item-outer">
+									<div class="item">
+										<a class="image fancybox" href="img/about-sliders/concrete/7.JPG?v=1.1">
+											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<span class="img-convert img-cover"><img src="img/about-sliders/concrete/7.JPG?v=1.1" alt="Деревообрабатывающий цех"></span>
+										</a>
+									</div>
+								</div>
+							</span>
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -361,9 +376,9 @@
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/workshop-metall.jpg?v=1.2">
-											<div class="item-label"></div>
-											<span class="img-convert img-cover"><img src="img/workshop-metall_sm.jpg?v=1.2" alt="Цех производства металлоконструкций"></span>
+										<a class="image fancybox" href="img/about-sliders/metal/5.jpg?v=1.2">
+											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<span class="img-convert img-cover"><img src="img/about-sliders/metal/5.jpg?v=1.2" alt="Цех производства металлоконструкций"></span>
 											<div class="image-inner"></div>
 										</a>
 									</div>
@@ -559,12 +574,12 @@
 
 
 
-	<!-- <div class="editorElement layer-type-block ui-droppable block-11" >
-		<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget"> -->
+	<div class="editorElement layer-type-block ui-droppable block-11" >
+		<div class="blocklist blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget">
 
 
 
-<!-- 			<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Видео</h2></div></div>
+			<!-- <div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Видео</h2></div></div>
 			<div class="video-gallery">
 
 				<a href="#video-1" class="video-item open-form-button">
@@ -595,7 +610,7 @@
 
 
 
-			<!-- <div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Галерея</h2></div></div>
+			<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Галерея</h2></div></div>
 
 			<div class="body-outer">
 				<div class="body">
@@ -604,169 +619,153 @@
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/1.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/1.jpg" data-fancybox="gallery">
 									<div class="item-label"></div>
-									<span class="img-convert img-cover"></span><img src="img/gallery/1.jpg" alt="gallery"></span>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/1.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/4.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/2.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/4.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/2.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/7.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/3.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/7.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/3.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/8.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/4.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/8.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/4.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/9.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/5.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/9.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/5.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/10.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/6.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/10.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/6.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/11.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/7.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/11.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/7.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/13.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/8.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/13.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/8.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/14.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/9.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/14.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/9.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/16.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/10.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/16.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/10.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/18.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/11.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/18.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/11.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/19.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/concrete/12.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/19.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/concrete/12.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/20.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/metal/1.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/20.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/metal/1.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/21.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/metal/2.JPG" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/21.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/metal/2.JPG" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/22.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/metal/3.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/22.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/metal/3.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/23.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/metal/4.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/23.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/metal/4.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
 
 						<div class="item-outer">
 							<div class="item">
-								<a class="image fancybox" href="img/gallery/24.jpg" data-fancybox="gallery">
+								<a class="image fancybox" href="img/about-sliders/metal/5.jpg" data-fancybox="gallery">
 									<div class="item-label"><div class="align-elem">Акция</div></div>
-									<span class="img-convert img-cover"><img src="img/gallery/24.jpg" alt="gallery"></span>
-									<div class="image-inner"></div>
+									<span class="img-convert img-cover"><img src="img/about-sliders/metal/5.jpg" alt="gallery"></span>
 								</a>
 							</div>
 						</div>
@@ -776,7 +775,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 
 
@@ -985,21 +984,21 @@
 		</div>
 	</form>
 
-<!-- 	<div id="video-1" class="open-video zoom-anim-dialog">
-		<iframe width="720" height="480" src="https://www.youtube.com/embed/dm1bEfG965U?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<div id="video-1" class="open-video zoom-anim-dialog">
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/dm1bEfG965U" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 
 	<div id="video-2" class="open-video zoom-anim-dialog">
-		<iframe width="720" height="480" src="https://www.youtube.com/embed/zlgxR_GiscE?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/zlgxR_GiscE" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 
 	<div id="video-3" class="open-video zoom-anim-dialog">
-		<iframe width="720" height="480" src="https://www.youtube.com/embed/ZqHAAZcm-h0?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/ZqHAAZcm-h0" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 
 	<div id="video-4" class="open-video zoom-anim-dialog">
-		<iframe width="720" height="480" src="https://www.youtube.com/embed/4iGi3JAEx7s?autoplay=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div> -->
+		<iframe width="720" height="480" src="https://www.youtube.com/embed/4iGi3JAEx7s" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 
 </div>
 
