--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -365,7 +365,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Шоурум №3</h2>
+						<h2 class="h2">Дом двухэтажный 183,79м<sup><small>2</small></sup> с мансардным этажом, с террасой и балконом на ул.Руднева</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/3_showroom_3/1.jpg?v=1.3" data-fancybox="3_showroom_3">
@@ -396,7 +396,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Шоурум №2</h2>
+						<h2 class="h2">Дом одноэтажный 165,64м<sup><small>2</small></sup>, с мансардным этажом и террасой на ул.Руднева</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/2_showroom_2/1.jpg?v=1.3" data-fancybox="2_showroom_2">
@@ -427,7 +427,7 @@
 					</div>
 
 					<div class="gallery-block">
-						<h2 class="h2">Шоурум №1</h2>
+						<h2 class="h2">Дом одноэтажный 76,61м<sup><small>2</small></sup>, с террасой перед домом и террасой на кровле, в коттеджном поселке "Солнечная поляна"</h2>
 						<div class="masonry">
 
 							<a class="item image fancybox" href="img/gallery/1_showroom_1/1.jpg?v=1.3" data-fancybox="1_showroom_1">
