gallery not wanna work MF

--- a/app/about.html
+++ b/app/about.html
@@ -350,7 +350,7 @@
 								<div class="item-outer">
 									<div class="item">
 										<a class="image fancybox" href="img/about-sliders/concrete/7.JPG?v=1.1">
-											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<div class="item-label"></div>
 											<span class="img-convert img-cover"><img src="img/about-sliders/concrete/7.JPG?v=1.1" alt="Деревообрабатывающий цех"></span>
 										</a>
 									</div>
@@ -372,20 +372,20 @@
 						<div class="title">
 							<h2 class="align-elem">Цех производства металлоконструкций</h2>
 						</div>
+
 						<div class="image">
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
 										<a class="image fancybox" href="img/about-sliders/metal/5.jpg?v=1.2">
-											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<div class="item-label"></div>
 											<span class="img-convert img-cover"><img src="img/about-sliders/metal/5.jpg?v=1.2" alt="Цех производства металлоконструкций"></span>
-											<div class="image-inner"></div>
 										</a>
 									</div>
 								</div>
 							</span>
-							<div class="image-inner"></div>
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -441,20 +441,20 @@
 						<div class="title">
 							<h2 class="align-elem">Деревообрабатывающий цех</h2>
 						</div>
+
 						<div class="image">
 							<span class="img-convert img-cover">
 								<div class="item-outer">
 									<div class="item">
 										<a class="image fancybox" href="img/workshop-wood.jpg?v=1.2">
-											<div class="item-label"><div class="align-elem">Акция</div></div>
+											<div class="item-label"></div>
 											<span class="img-convert img-cover"><img src="img/workshop-wood_sm.jpg?v=1.2" alt="Деревообрабатывающий цех"></span>
-											<div class="image-inner"></div>
 										</a>
 									</div>
 								</div>
 							</span>
-							<div class="image-inner"></div>
 						</div>
+
 					</div>
 				</div>
 			</div>
